@startuml dd

class BestioleFactory {
  + liste_taux : map<string : double>
  + CreerBestiole():Bestiole
}

class Bestiole {
    + id : int
    + vitesse : double
    + x : double
    + y : double
    + orientation : double
    + taille : double
    + age : int
    + age_limite : int
    + estVivant : bool
    + resistance : double
    + detectabilité : double
    + mort(condition)
    + clonage()
    + Percussion()
    + Detection(Milieu)
    + Bouge()
    + Action(Milieu)
}

class Millieu {
 + longueur : int
 + largeur : int
 +AddMember()
 +eliminerBestiole(Bestiole)
 +Step()
}

class BestioleOreille {
    - owner : Bestiole
    - delta : float
    - gamme : float
    + Detecter(Millieu) : Vector<Bool> 

}

Interface Accessoire {
  setParam() : void
}

Interface Capteur {
  Detecter(Millieu) : vector<Bool>
}


class BestioleNageoire {
    - owner : Bestiole  
    - boost : float
    + setParam() : void #setVit
}

class BestioleCamouflage {
  - owner : Bestiole
  - phi: double
  + setParam() : void #setDetect
}

class BestioleCarapace {
  - owner : Bestiole
  - eta : double
  - omega : double
  + setParam() : void #setResist
}

class BestioleYeux {
  - owner : Bestiole
  - alpha : Float
  - delta : Float
  - gamma : float
  + Detecter(Millieu) : Vector<Bool>
}

class IComportement {
  + Deplacer(Bestiole)
}

class Grégaire {
    -Deplacer(Bestiole) : void #ajustDirection

}

class Peureuse{
    -Deplacer(Bestiole) : void #def seuil+fuir

}

class Kamikaze{
    -Deplacer(Bestiole) : void #percuterKamikaze
}

class Prévoyant{
    -Deplacer(Bestiole) : void #ajuster trajectoire

}


class Multi{
    -adoptComportement(Bestiole) : void ?
}

BestioleFactory --> Bestiole : créer

Capteur *-- Bestiole
Capteur<|..BestioleOreille
Capteur<|..BestioleYeux

IComportement <|.. Grégaire
IComportement <|.. Peureuse
IComportement <|.. Kamikaze
IComportement <|.. Prévoyant
IComportement <|.. Multi
Bestiole *-- IComportement



Accessoire <|..BestioleNageoire
Accessoire <|..BestioleCarapace
Accessoire <|..BestioleCamouflage
Accessoire *-- Bestiole


Millieu --* "many" Bestiole : contient

Millieu -- BestioleFactory

@enduml
